Julius 3rd portfolio
my 3rd portfolio

--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,11 @@ stuff
 test
 w_ngNinja&ionicStuff
 infinite
-www/assets
 css/main.css
 css/reset.css
 firebase.json
 css_libs
 assets
 jhaSecurityRules
+jq-plugins
 
